Bug 1568516 - Allow a `uint32_t` static pref with a mirror value of `never`. r=KrisWright

There was a missing setter function for this combination, which hasn't been
used before.

Differential Revision: https://phabricator.services.mozilla.com/D39263